test/success/system/_test_types.hs
a :: Int
b :: Double
c :: String
d :: Bool
l, l' :: Int
g' :: Int -> Bool
e', e'' :: Bool -> Bool -> Bool
f' :: Bool -> String -> [Int] -> Int 
a = 3
main =  do
        let e :: [Int]
            f :: [Double]
            g :: [Bool]
        print a
