test/fail/integration/_fail_sem_let_stmts_1.hs
main = do
       let x :: Int -> [Int]
       print "hello"